--- a/my-shop-client/src/styles/navbar_styles.css
+++ b/my-shop-client/src/styles/navbar_styles.css
@@ -1,6 +1,8 @@
 .nav-item {
   font-family: "Lato", sans-serif;
   font-size: 14px;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .nav-searchBar {
