--- a/my-shop-client/src/styles/auth_styles.css
+++ b/my-shop-client/src/styles/auth_styles.css
@@ -5,31 +5,35 @@ body {
   padding: 0;
 }
 
-.bg-image {
-  position: relative;
-  left: 0;
-  max-height: 100%;
-  width: 100%;
-  overflow: hidden;
+.auth {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
 
-.bg-image::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
+.bg-image {
   width: 100%;
   height: 100vh;
+  grid-row: 1;
+  grid-column: 1;
+  position: sticky;
+  top: 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../assets/carousel/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  filter: brightness(60%);
+}
+
+.form-box {
+  z-index: 0;
+  grid-row: 1;
+  grid-column: 1;
+  margin: 0 auto;
 }
 
 .card {
   border-radius: 15px;
+  overflow: auto;
 }
 
 .btn:focus {
@@ -37,24 +41,6 @@ body {
   box-shadow: none;
 }
 
-.gradient-custom-3 {
-  /* fallback for old browsers */
-  background: #84fab0;
-
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(
-    to right,
-    rgba(132, 250, 176, 0.5),
-    rgba(143, 211, 244, 0.5)
-  );
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(
-    to right,
-    rgba(132, 250, 176, 0.5),
-    rgba(143, 211, 244, 0.5)
-  );
-}
 .gradient-custom-4 {
   /* fallback for old browsers */
   background: #84fab0;
@@ -88,4 +74,12 @@ body {
 }
 .invalidBorder {
   border: 1px solid red;
+}
+
+.anchor-link {
+  text-decoration: none;
+}
+
+.anchor-link:hover {
+  text-decoration: underline;
 }
