--- a/my-shop-client/src/styles/auth_styles.css
+++ b/my-shop-client/src/styles/auth_styles.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
 }
 
-.auth {
+.grid-box {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -24,7 +24,7 @@ body {
   background-size: cover;
 }
 
-.form-box {
+.center-box {
   z-index: 0;
   grid-row: 1;
   grid-column: 1;
