--- a/my-shop-client/src/styles/homepage_styles.css
+++ b/my-shop-client/src/styles/homepage_styles.css
@@ -48,6 +48,20 @@
 }
 
 .hero-button:hover {
-  background-color: #09d1ae;
-  border: 1px solid #09d1ae;
+  /* fallback for old browsers */
+  background: #84fab0;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(132, 250, 176, 1),
+    rgba(143, 211, 244, 1)
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to right,
+    rgba(132, 250, 176, 1),
+    rgba(143, 211, 244, 1)
+  );
 }
