--- a/my-shop-client/src/styles/dashboard_styles.css
+++ b/my-shop-client/src/styles/dashboard_styles.css
@@ -42,3 +42,53 @@
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out;
 }
+
+.card-header {
+  padding: 1.3rem 1.3rem;
+  margin-bottom: 0;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(222, 226, 230, 0.7);
+}
+
+.card-header:first-child {
+  border-radius: 0.25rem 0.25rem 0 0;
+}
+
+.image-upload img {
+  max-width: 100px;
+  margin-bottom: 20px;
+}
+
+.content-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.content-title {
+  margin-bottom: 0;
+}
+
+@media (max-width: 992px) {
+  .content-header {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+  }
+
+  .content-title {
+    margin-bottom: 1rem;
+  }
+}
