--- a/my-shop-client/src/styles/navbar_styles.css
+++ b/my-shop-client/src/styles/navbar_styles.css
@@ -2,6 +2,9 @@
   font-family: "Lato", sans-serif;
   font-size: 14px;
   align-items: center;
+}
+
+.navbar-nav .nav-item {
   margin-right: 20px;
 }
 
