--- a/my-shop-client/src/styles/navbar_styles.css
+++ b/my-shop-client/src/styles/navbar_styles.css
@@ -2,10 +2,12 @@
   font-family: "Lato", sans-serif;
   font-size: 14px;
   align-items: center;
+  margin-right: 20px;
 }
 
-.navbar-nav .nav-item {
-  margin-right: 20px;
+.nav-icons:hover,
+.nav-link:hover {
+  color: white !important;
 }
 
 .navbar-brand img {
