--- a/my-shop-client/src/styles/product_styles.css
+++ b/my-shop-client/src/styles/product_styles.css
@@ -1,4 +1,85 @@
 .product-img {
+  position: relative;
   max-width: 100%;
   max-height: 100%;
+}
+
+.img-wrapper {
+  position: relative;
+}
+
+.img-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.img-overlay:before {
+  content: " ";
+  display: block;
+  height: 50%;
+}
+
+.cart-btn:hover {
+  border: 0;
+  /* fallback for old browsers */
+  background: #84fab0;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(132, 250, 176, 1),
+    rgba(143, 211, 244, 1)
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to right,
+    rgba(132, 250, 176, 1),
+    rgba(143, 211, 244, 1)
+  );
+}
+
+.category-list {
+  padding: 0;
+  margin: 0;
+}
+
+.category-li {
+  line-height: 30px;
+  align-items: center;
+  display: flex;
+}
+
+.rc-slider-track {
+  background-color: #0dd0b2;
+}
+
+.rc-slider-dot-active {
+  border-color: #0dd0b2;
+}
+
+.rc-slider-handle {
+  border: solid 2px #0dd0b2;
+}
+
+.rc-slider-handle:active {
+  border-color: #0dd0b2;
+  box-shadow: 0 0 5px #0dd0b2;
+  cursor: grabbing;
+}
+
+.rc-slider-handle-dragging.rc-slider-handle-dragging.rc-slider-handle-dragging {
+  border-color: #0dd0b2;
+  box-shadow: 0 0 0 5px #0dd0b2;
+}
+
+.rc-slider-handle-click-focused:focus {
+  border-color: #0dd0b2;
+}
+.rc-slider-handle:hover {
+  border-color: #0dd0b2;
 }
