Complete product page

--- a/my-shop-client/src/styles/homepage_styles.css
+++ b/my-shop-client/src/styles/homepage_styles.css
@@ -78,6 +78,10 @@
   border-style: groove;
 }
 
+.newsletter-input:focus-visible {
+  outline: none;
+}
+
 .newsletter-btn {
   width: 100%;
   height: 50px;
