--- a/my-shop-client/src/styles/product_styles.css
+++ b/my-shop-client/src/styles/product_styles.css
@@ -43,6 +43,10 @@
   );
 }
 
+.accordion-button:focus {
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+
 .category-list {
   padding: 0;
   margin: 0;
@@ -52,6 +56,20 @@
   line-height: 30px;
   align-items: center;
   display: flex;
+}
+
+.clear-li {
+  margin-top: 10px;
+  line-height: 30px;
+  justify-content: flex-end;
+  display: flex;
+  border-top: 1px dashed #d8d8d8;
+}
+
+.clear-span:hover {
+  color: #0c63e4;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .rc-slider-track {
@@ -82,4 +100,54 @@
 }
 .rc-slider-handle:hover {
   border-color: #0dd0b2;
+}
+
+.sort-title {
+  font-size: 18px;
+  padding: 10px;
+}
+
+.sort-select {
+  width: 150px;
+}
+
+.product-number {
+  font-size: 18px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin-top: 20px;
+  padding: 0;
+}
+
+.pagination a {
+  cursor: default;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #212529;
+  color: #212529;
+  margin-left: 10px;
+}
+
+.pagination li:not(.disabled) a:hover {
+  background-color: #84fab0;
+  cursor: pointer;
+}
+
+.pagination li a {
+  font-weight: bold;
+}
+
+.pagination li.active a {
+  color: #fff;
+  background: #212529;
+}
+
+.pagination li.disabled a {
+  pointer-events: none;
+  color: rgb(198, 197, 202);
+  border: 1px solid rgb(198, 197, 202);
 }
