Add datalist to search bar

--- a/my-shop-client/src/styles/navbar_styles.css
+++ b/my-shop-client/src/styles/navbar_styles.css
@@ -52,3 +52,18 @@
 #search-icon {
   background-color: white;
 }
+
+datalist {
+  display: none !important;
+}
+
+[list]::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
+
+.autocomplete-search {
+  display: block;
+  background-color: white;
+  color: white;
+  overflow-y: auto;
+}
