--- a/my-shop-client/src/styles/dashboard_styles.css
+++ b/my-shop-client/src/styles/dashboard_styles.css
@@ -92,3 +92,9 @@
     margin-bottom: 1rem;
   }
 }
+
+.sidebar-item:hover,
+.logout:hover {
+  background-color: #cee6e4 !important;
+  color: #212529 !important;
+}
