--- a/my-shop-client/src/styles/product_styles.css
+++ b/my-shop-client/src/styles/product_styles.css
@@ -1,3 +1,7 @@
+p {
+  white-space: pre-wrap;
+}
+
 .product-img {
   position: relative;
   max-width: 100%;
@@ -149,4 +153,9 @@
   pointer-events: none;
   color: rgb(198, 197, 202);
   border: 1px solid rgb(198, 197, 202);
+}
+
+.related-products-col {
+  max-width: 380px;
+  max-height: 466px;
 }
