--- a/my-shop-client/src/styles/product_styles.css
+++ b/my-shop-client/src/styles/product_styles.css
@@ -27,23 +27,20 @@ p {
   height: 50%;
 }
 
+.cart-btn {
+  transition: all 0.4s ease-in;
+}
+
 .cart-btn:hover {
   /* fallback for old browsers */
-  background: #84fab0;
+  background: #5e5b5b;
+}
 
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(
-    to right,
-    rgba(132, 250, 176, 1),
-    rgba(143, 211, 244, 1)
-  );
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(
-    to right,
-    rgba(132, 250, 176, 1),
-    rgba(143, 211, 244, 1)
-  );
+.added-btn {
+  width: 170px;
+  transition: all 0.4s ease-in;
+  transform: translateY(4px);
+  color: white;
 }
 
 .accordion-button:focus {
