--- a/my-shop-client/src/styles/cart_styles.css
+++ b/my-shop-client/src/styles/cart_styles.css
@@ -6,6 +6,11 @@
   margin-bottom: 3px;
 }
 
+.item-name-bold {
+  margin-bottom: 3px;
+  font-weight: bold;
+}
+
 .quantity-modifier {
   width: 90px;
   display: flex;
@@ -38,4 +43,47 @@
 
 .offcanvas-body::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
+}
+
+.thankyou-icon {
+  font-size: 100px;
+  color: green;
+}
+
+.thankyou-modal {
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+.thankyou-title {
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.thankyou-text {
+  font-size: 20px;
+}
+
+.loading-overlay {
+  display: none;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 9998;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-overlay.is-active {
+  display: flex;
+  flex-direction: column;
+}
+
+.loading-text {
+  color: white;
+  padding-top: 20px;
+  font-size: 25px;
 }
