--- a/my-shop-client/src/styles/dashboard_styles.css
+++ b/my-shop-client/src/styles/dashboard_styles.css
@@ -45,6 +45,7 @@
 
 .card-header {
   padding: 1.3rem 1.3rem;
+  max-width: 1250px;
   margin-bottom: 0;
   background-color: #fff;
   border-bottom: 1px solid rgba(222, 226, 230, 0.7);
@@ -97,4 +98,82 @@
 .logout:hover {
   background-color: #cee6e4 !important;
   color: #212529 !important;
+}
+
+.item-card {
+  max-width: 828px;
+}
+
+.children-width {
+  max-width: 1254px;
+}
+
+.status-tag-default {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 50rem;
+  background-color: #0d6efd;
+}
+
+.status-tag-Processing {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 50rem;
+  background-color: #ffc107;
+}
+
+.status-tag-Dispatched {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 50rem;
+  background-color: #212529;
+}
+
+.status-tag-Delivered {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 50rem;
+  background-color: #198754;
+}
+
+.status-tag-Cancelled {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: 0.75em;
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 50rem;
+  background-color: #dc3545;
 }
