--- a/my-shop-client/src/styles/product_styles.css
+++ b/my-shop-client/src/styles/product_styles.css
@@ -115,6 +115,11 @@ p {
   font-size: 18px;
 }
 
+.product-thumbnail {
+  max-width: 60px;
+  max-height: 80px;
+}
+
 .pagination {
   display: flex;
   justify-content: space-between;
@@ -155,4 +160,17 @@ p {
 .related-products-col {
   max-width: 380px;
   max-height: 466px;
+}
+
+.delete-confirm {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+}
+
+.delete-text {
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  font-size: 14px;
 }
